Project

General

Profile

Actions

Bug #4422

closed

[ext/openssl] Fix DSA public key PEM encoding

Bug #4422: [ext/openssl] Fix DSA public key PEM encoding

Added by MartinBosslet (Martin Bosslet) over 15 years ago. Updated over 15 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 1.9.2p180 (2011-02-18 revision 30909) [i686-linux]
Backport:
[ruby-core:35328]

Description

=begin
Related to http://redmine.ruby-lang.org/issues/show/4421.

The difference is that DSA already uses the "right" function for DER encoding,
but the "wrong" function (PEM_write_bio_DSAPublicKey instead of
PEM_write_bio_DSA_PUBKEY) for PEM encoding.

Similar to the RSA case, fallbacks in initialize are also re-prioritized
and again this should cause no trouble because initialize recognizes all
of the formats.

Regards,
Martin
=end


Files

fix_dsa_pub_encoding.diff (1.05 KB) fix_dsa_pub_encoding.diff MartinBosslet (Martin Bosslet), 02/22/2011 08:25 AM

Updated by naruse (Yui NARUSE) over 15 years ago Actions #1

  • Status changed from Open to Assigned
  • Assignee set to nahi (Hiroshi Nakamura)

=begin

=end

Updated by MartinBosslet (Martin Bosslet) over 15 years ago Actions #2

  • Assignee changed from nahi (Hiroshi Nakamura) to MartinBosslet (Martin Bosslet)

Updated by Anonymous over 15 years ago Actions #3

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r31523.
Martin, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


Thu May 12 08:18:45 2011 Martin Bosslet

* ext/openssl/ossl_pkey_dsa.c: Use generic X.509 SubjectPublicKeyInfo
  format for PEM-encoding DSA public keys. 
  [ruby-core:35328] [Bug #4422]

Previous revision: 31520

Actions

Also available in: PDF Atom