Thu May 12 08:18:45 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

* ext/openssl/ossl_pkey_dsa.c: Use generic X.509 SubjectPublicKeyInfo
	  format for PEM-encoding DSA public keys. 
	  [ruby-core:35328] [Bug #4422]

Previous revision: 31520



git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@31523 b2dd03c8-39d4-4d8f-98ff-823fe69b080e